--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 project(phosphorvm)
 add_executable(${PROJECT_NAME}
+	"bytecode/disasm.cpp"
 	"unpack/chunk/chunk.cpp"
 	"unpack/decode.cpp"
 	"unpack/winfile.cpp"
