--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,10 @@ cmake_minimum_required(VERSION 2.8)
 project(phosphorvm)
 add_executable(${PROJECT_NAME}
 	"bytecode/disasm.cpp"
+	"interpreter/vm.cpp"
 	"unpack/decode.cpp"
 	"unpack/mmap.cpp"
+
 	"main.cpp"
 )
 
