--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 project(phosphorvm)
 add_executable(${PROJECT_NAME}
 	"bytecode/disasm.cpp"
+	"interpreter/builtins/debug.cpp"
 	"interpreter/vm.cpp"
 	"unpack/decode.cpp"
 	"unpack/mmap.cpp"
@@ -16,6 +17,7 @@ target_compile_options(${PROJECT_NAME} PUBLIC
 	"-Wextra"
 	"-Wpedantic"
 	"-Wno-missing-braces"
+	"-Wno-unused-but-set-parameter"
 	"-Wno-c99-extensions" # C++20 { .a = thingy } syntax
 	"-ggdb"
 )
